Test component up

--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Showtimes</title>
 </head>
-<body id="app">
-
+<body>
+<div id="app"></div>
 </body>
 </html>
